:bug: Fix button icon alignment

--- a/src/components/CanvasSettings.sass
+++ b/src/components/CanvasSettings.sass
@@ -23,6 +23,7 @@
   height: 1.4rem
   fill: silver
   transition: fill 0.2s linear
+  vertical-align: bottom
 
 .button:hover
   background: white
